--- a/style.css
+++ b/style.css
@@ -1,3 +1,104 @@
-h1{
+.noto-serif-font {
+  font-family: "Noto Serif", serif;
+}
+.inter-font {
+  font-family: "Inter", sans-serif;
+}
+
+/* shared style */
+
+.font-color-1{
+    color: #000000;
+}
+.font-color-2{
+    color: #8987A1;
+}
+.font-color-3{
+    color: #252432;
+}
+.font-color-4{
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin-bottom: -0.1rem;
+}
+main > section{
+    margin-top: 120px;
+}
+.secondary-color{
+    color: #E95A08;
+}
+.center{
     text-align: center;
+}
+.btn-primary{
+
+}
+
+/* header style start */
+.header, .hero-banner{
+    max-width: 1140px;
+    margin: 0 auto;
+    
+}
+
+
+/* navbar style */
+.navber{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 2px solid; */
+}
+.link, .link-span{
+    display: flex;
+    
+}
+.nav-link{
+    list-style: none;
+    margin-left: 2.5rem;
+}
+.nav-link a{
+    text-decoration: none;
+}
+.link-span{
+    font-weight: 400;
+}
+.home-link{
+    font-weight: 700;
+}
+/* hero banner style start */
+.hero-banner{
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    margin-top: 130px;
+   
+}
+
+.banner-title{
+    font-size: 4.1rem;
+    font-weight: 700;
+    margin-bottom: -1rem;
+}
+/* .banner-discription{
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin-bottom: -0.1rem;
+} */
+
+
+
+/* Responsibe Media Quary */
+/* mobile device */
+@media screen and (max-width:576px) {
+    .link-span{
+        display: none;
+    }
+    .hero-banner{
+        flex-direction: column-reverse;
+        margin-top: 28px;
+    }
+    
+    
 }
