--- a/style.css
+++ b/style.css
@@ -136,15 +136,34 @@
 .img-div-2{
     position:absolute;
     z-index: 100;
-}
-.img-div-2 img{
-    width: 200px;
     margin-top: -100px;
     margin-left: 400px;
+}
+.trusted{
+    filter: drop-shadow(-4px 10px 4px  rgb(49, 46, 46));
+    width: 200px;
+    height: auto;
+    animation: rotate360 2s infinite linear;
+}
+@keyframes rotate360{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
 /* deal section style  */
 .deal{
     margin-top: 120px;
+}
+.deal-section-title{
+    font-size: 3.13rem;
+    font-weight: 700;
+}
+.deal-section-description{
+    margin-top: 16px;
+    margin-bottom: 100px;
 }
 .deal-section{
     height: 50vh;
@@ -271,6 +290,11 @@
         flex-direction: column-reverse;
         margin-top: 28px;
         margin-left: 10px;
+    }
+    .banner-title, .plants-title, .plant-title, .deal-section-title{
+        font-size: 24px;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
     .card-container{
         grid-template-columns: repeat(2, 1fr);
