add new somthing to the project

--- a/style.css
+++ b/style.css
@@ -234,11 +234,12 @@
     margin-top: 120px;
 }
 .bg-img{
-    background-image: url(assets/news-letter-bg.png);
+    /* background:linear-gradient(rgba(0, 0, 0, 0.4)),  url(assets/deal-zabo.png) no-repeat center ; */
+    background:linear-gradient(rgba(7, 51, 79, 0.4)),  url(assets/news-letter-bg.png) no-repeat center;
     padding: 12.5rem 18.75rem;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     background-size: cover;
-    background-position: center;  
+    /* background-position: center;   */
 }
 .join-title{
     font-weight: 700;
